refactor: fixes for Drive api updates

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -13,11 +13,11 @@
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="css/main.min.css">
         <link rel="canonical" href="https://michaelharrisonroth.github.io/simplepass/app" />
-        <script>
+        <!-- <script>
             if (!(window.location.host.startsWith("local")) && (window.location.protocol != "https:")) {
                 window.location.protocol = "https";
             }
-        </script>
+        </script> -->
     </head>
     <body>
         <!--[if lt IE 9]>
