--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>SimplePass by Michael Harrison Roth</title>
+    <title>Bombe by ManyUses</title>
     <meta name="description" content="A simple password manager that stores and encrypts your passwords in Google Drive&#8482;">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://michaelharrisonroth.github.io/simplepass/app/img/banner.jpg" />
@@ -15,20 +15,19 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">SimplePass</h1>
+      <h1 class="project-name">Bombe</h1>
       <h2 class="project-tagline">A Simple password manager that integrates with Google Drive</h2>
       <a href="app" target="_blank" class="btn">Open App</a>
-      <a href="https://chrome.google.com/webstore/detail/simplepass/fefhgcpbapmnhofopdkpnkndnpnabiic" target="_blank" class="btn">View in Chrome Web Store</a>
-      <a href="https://github.com/michaelharrisonroth/simplepass" target="_blank" class="btn">View on GitHub</a>
+      <a href="https://github.com/manyuses/bombe" target="_blank" class="btn">View on GitHub</a>
     </section>
 
     <section class="main-content">
       <img src="app/img/logo.png" class="logo">
       <h3>
-        <a id="what-is-simplepass" class="anchor" href="#what-is-simplepass" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Is SimplePass?
+        <a id="what-is-simplepass" class="anchor" href="#what-is-simplepass" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What Is Bombe?
       </h3>
 
-      <p>SimplePass is a password manager that stores and encrypts your passwords in Google Drive. Your data never touches a 3rd party server.</p>
+      <p>Bombe is a password manager that stores and encrypts your passwords in Google Drive. Your data never touches a 3rd party server.</p>
 
       <h3>
         <a id="what-is-simplepass" class="anchor" href="#what-is-simplepass" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Why?
@@ -44,7 +43,7 @@
 
       <p>Most existing password managers add an additional item to your every day workflow. Usually it is another login and account to keep track of, or at the very least another application to install on your already full harddrive. They are also usually very feature rich, providing more than necessary to manage your passwords.</p>
 
-      <p>SimplePass is a minimalistic approach to storing your passwords and it coincides with your existing workflow by integrating with Google Drive. Simply create a new row, fill it out, and when you need to login to an application return to SimplePass and click the "copy" button to copy your password to the clipboard.</p>
+      <p>Bombe is a minimalistic approach to storing your passwords and it coincides with your existing workflow by integrating with Google Drive. Simply create a new row, fill it out, and when you need to login to an application return to Bombe and click the "copy" button to copy your password to the clipboard.</p>
 
       <p><strong><i>It's a good idea to clear your clipboard as often as possible if it is storing passwords</i></strong></p>
 
@@ -58,7 +57,7 @@
 
       <p>The application is hosted on an SSL encrypted server and the application itself has no server side component, so none of your crucial data is stored in the memory of a 3rd party server. All communications are directly between the front-end and Google Drive.</p>
 
-      <strong><i>It is a good idea to enable 2 Factor Authentication for the master Google account that will be utilizing SimplePass</i></strong>
+      <strong><i>It is a good idea to enable 2 Factor Authentication for the master Google account that will be utilizing Bombe</i></strong>
 
       <p>
         <a href="https://chrome.google.com/webstore/detail/simplepass/fefhgcpbapmnhofopdkpnkndnpnabiic"><img src="app/img/chrome-webstore.png" style="display: block;margin-top: 20px;"></a>
