chore: minor css cleanup

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -39,7 +39,7 @@
             <div class="navbar-collapse">
                 <!-- <button class="js-save save btn btn-sm btn-primary">&check;</button> -->
                 <button class="js-logout logout btn btn-sm btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Logout">
-                    <i class="ri-logout-box-r-line"></i>
+                    <i class="ri-lock-line"></i>
                 </button>
                 <div class="generator" data-toggle="tooltip" data-placement="bottom" title="Generate password">
                     <button class="js-generate btn btn-sm btn-secondary">
