--- a/public/app/index.html
+++ b/public/app/index.html
@@ -68,13 +68,13 @@
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="lockers"></ul>
                     <button class="js-download download btn btn-sm btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Download Passwords">
-                        <i class="ri-file-download-line"></i>
+                        <i class="ri-folder-download-line"></i>
                     </button>
-                    <button class="btn btn-sm btn-secondary js-remove-locker" data-toggle="tooltip" data-placement="bottom" title="Delete Group">
-                        <i class="ri-close-line"></i>
+                    <button class="btn btn-sm btn-secondary js-remove-locker-confirm" data-toggle="tooltip" data-placement="bottom" title="Delete Password Group">
+                        <i class="ri-delete-bin-line"></i>
                     </button>
-                    <button class="btn btn-sm btn-secondary js-add-locker" data-toggle="tooltip" data-placement="bottom" title="Add Group">
-                        <span><i class="ri-add-line"></i></span>
+                    <button class="btn btn-sm btn-secondary js-add-locker" data-toggle="tooltip" data-placement="bottom" title="Add Password Group">
+                        <span><i class="ri-folder-add-line"></i></span>
                         <span><i class="ri-check-line"></i></span>
                     </button>
                     <input class="js-locker-name form-control" type="text" placeholder="Group name" />
@@ -102,25 +102,25 @@
             </button>
         </div>
 
-        <!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+        <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirm-modal-title" aria-hidden="true">
+            <div class="modal-dialog modal-md" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                  <h5 class="modal-title" style="float: left;" id="confirm-modal-title">Modal title</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
                 <div class="modal-body">
-                  ...
+                  <!-- message -->
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                  <button type="button" class="btn btn-primary modal-confirm">Ok</button>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
         <!-- tether -->
         <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
