--- a/public/app/index.html
+++ b/public/app/index.html
@@ -37,7 +37,6 @@
             </div>
 
             <div class="navbar-collapse">
-                <!-- <button class="js-save save btn btn-sm btn-primary">&check;</button> -->
                 <button class="js-logout logout btn btn-sm btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Logout">
                     <i class="ri-lock-line"></i>
                 </button>
@@ -96,37 +95,26 @@
           </div>
         </div>
 
+        <div class="container select-group-message">
+            <div class="card">
+                <div class="card-block">
+                    <div class="card-text">
+                        Select or create a password group to get started.
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </div>
+
         <div class="load-overlay">
             <button class="js-login btn btn-danger">
                 <img src="img/logo-drive.png"> Login with Google Drive
             </button>
         </div>
 
-        <div class="modal fade" id="confirm-modal" tabindex="-1" role="dialog" aria-labelledby="confirm-modal-title" aria-hidden="true">
-            <div class="modal-dialog modal-md" role="document">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" style="float: left;" id="confirm-modal-title">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  <!-- message -->
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                  <button type="button" class="btn btn-primary modal-confirm">Ok</button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <!-- tether -->
-        <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-        <!-- load app -->
+        <script type="text/javascript" src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
         <script type="text/javascript" src="js/index.min.js"></script>
-        <!-- load google apis -->
-        <script src="https://apis.google.com/js/client.js?onload=gapiCallback"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+        <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=gapiCallback"></script>
     </body>
 </html>
