chore: better empty states

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -76,7 +76,6 @@
                         <span><i class="ri-folder-add-line"></i></span>
                         <span><i class="ri-check-line"></i></span>
                     </button>
-                    <input class="js-locker-name form-control" type="text" placeholder="Group name" />
                 </div>
             </div>
             
@@ -92,6 +91,9 @@
             <div class="tbody">
                 <!-- data goes here -->
             </div>
+            <button class="js-new-row new btn btn-sm btn-secondary" style="margin: 2rem auto;">
+                <i class="ri-add-line"></i>
+            </button>
           </div>
         </div>
 
@@ -99,7 +101,7 @@
             <div class="card">
                 <div class="card-block">
                     <div class="card-text">
-                        Select or create a password group to get started.
+                        Select or <a href="#" class="js-add-locker">create a password group</a> to get started.
                     </div>
                   </div>
                 </div>
