refactor: use custom files for lockers

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -74,7 +74,9 @@
                     </button>
                     <button class="btn btn-sm btn-secondary js-add-locker" data-toggle="tooltip" data-placement="bottom" title="Add Password Group">
                         <span><i class="ri-folder-add-line"></i></span>
-                        <span><i class="ri-check-line"></i></span>
+                    </button>
+                    <button class="btn btn-sm btn-secondary js-share-locker" data-toggle="tooltip" data-placement="bottom" title="Share Password Group">
+                        <span><i class="ri-user-shared-line"></i></span>
                     </button>
                 </div>
             </div>
