refactor: rename to gnokey

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -6,14 +6,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>BombePass</title>
+        <title>Gnokey</title>
         <meta name="description" content="A simple password manager that stores and encrypts your passwords in Google Drive.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="css/main.min.css">
-        <link rel="canonical" href="https://bombepass.com/app" />
+        <link rel="canonical" href="https://gnokey.com/app" />
         <!-- <script>
             if (!(window.location.host.startsWith("local")) && (window.location.protocol != "https:")) {
                 window.location.protocol = "https";
