--- a/public/app/index.html
+++ b/public/app/index.html
@@ -9,10 +9,10 @@
         <title>Gnokey</title>
         <meta name="description" content="A simple password manager that stores and encrypts your passwords in Google Drive.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="/app/img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/app/img/favicon.ico" type="image/x-icon">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
-        <link rel="stylesheet" href="css/main.min.css">
+        <link rel="stylesheet" href="/app/css/main.min.css">
         <link rel="canonical" href="https://gnokey.com/app" />
         <!-- <script>
             if (!(window.location.host.startsWith("local")) && (window.location.protocol != "https:")) {
@@ -28,12 +28,12 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">
-                <img src="img/logo.png" />
+                <img src="/app/img/logo.png" />
               </a>
             </div>
 
             <div class="loader">
-                <img src="img/loader.gif" />
+                <img src="/app/img/loader.gif" />
             </div>
 
             <div class="navbar-collapse">
@@ -109,12 +109,13 @@
 
         <div class="load-overlay">
             <button class="js-login btn btn-danger">
-                <img src="img/logo-drive.png"> Login with Google Drive
+                <img src="/app/img/logo-drive.png"> Login with Google Drive
             </button>
         </div>
 
         <script type="text/javascript" src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
-        <script type="text/javascript" src="js/index.min.js"></script>
+        <script type="text/javascript" src="/app/js/rsa.min.js"></script>
+        <script type="text/javascript" src="/app/js/index.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
         <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=gapiCallback"></script>
     </body>
