chore: rsa encryption methods

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -108,8 +108,8 @@
         </button>
 
         <div class="load-overlay">
-            <button class="js-login btn btn-danger">
-                <img src="/app/img/logo-drive.png"> Login with Google Drive
+            <button class="js-login btn btn-link">
+                <img src="/app/img/google-login.png">
             </button>
         </div>
 
