chore: logo update, sendgrid list api

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NO UTMS!</title>
-    <meta content="NO UTMS is a simple app that cleans up links so they are less pesky." name="description">
-    <meta content="No UTMS! - Link UTM remover" property="og:title">
-    <meta content="NO UTMS is a simple app that cleans up links so they are less pesky." property="og:description">
-    <meta content="No UTMS! - Link UTM remover" property="twitter:title">
-    <meta content="NO UTMS is a simple app that cleans up links so they are less pesky." property="twitter:description">
+    <title>Gnokey</title>
+    <meta content="" name="description">
+    <meta content="" property="og:title">
+    <meta content="" property="og:description">
+    <meta content="" property="twitter:title">
+    <meta content="" property="twitter:description">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
     <meta content="width=device-width, initial-scale=1" name="viewport">
