--- a/public/app/index.html
+++ b/public/app/index.html
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">
-                <img src="/app/img/logo.png" />
+                <img src="/app/img/logo.svg" />
               </a>
             </div>
 
