fix: cookie gUser fix

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Gnokey</title>
-        <meta name="description" content="A simple password manager that stores and encrypts your passwords in Google Drive.">
+        <title>App | Gnokey</title>
+        <meta name="description" content="Safely manage accounts and passwords without more accounts and passwords.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="/app/img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="/app/img/favicon.ico" type="image/x-icon">
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-header">
               <a class="navbar-brand" href="#">
-                <img src="/app/img/logo.svg" />
+                <img src="/app/img/logo.png" />
               </a>
             </div>
 
@@ -78,13 +78,16 @@
 
           <div class="table">
             <div class="controls">
+                <span>
+                    Password Groups
+                </span>
                 <div class="dropdown js-lockers">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="lockers" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         Groups
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="lockers"></ul>
-                    <button class="js-download download btn btn-sm btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Download Password Group">
+                    <button class="js-download download btn btn-sm btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Export Password Group">
                         <i class="ri-folder-download-line"></i>
                     </button>
                     <button class="btn btn-sm btn-secondary js-share-locker" data-toggle="tooltip" data-placement="bottom" title="Share Password Group">
