feat: lastpass import

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -6,11 +6,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>App | Gnokey</title>
-        <meta name="description" content="Safely manage accounts and passwords without more accounts and passwords.">
+        <title>Manage Your Passwords from Google Drive| Gnokey</title>
+        <meta content="A secure, simple, and free password manager. Use the convenience of Google Drive to manage your passwords." name="description">
+        <meta content="Gnokey |  Password Manager" property="og:title">
+        <meta content="A secure, simple, and free password manager. Use the convenience of Google Drive to manage your passwords." property="og:description">
+        <meta content="https://uploads-ssl.webflow.com/600f7c0bb816926a774f5d03/6018534ab0640134cb4d1905_gnokey-open-graph-image.jpg" property="og:image">
+        <meta content="Gnokey |  Password Manager" property="twitter:title">
+        <meta content="A secure, simple, and free password manager. Use the convenience of Google Drive to manage your passwords." property="twitter:description">
+        <meta content="https://uploads-ssl.webflow.com/600f7c0bb816926a774f5d03/6018534ab0640134cb4d1905_gnokey-open-graph-image.jpg" property="twitter:image">
+        <meta property="og:type" content="website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="/app/img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/app/img/favicon.ico" type="image/x-icon">
+        <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
+        <link href="/images/webclip.png" rel="apple-touch-icon">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="/app/css/main.min.css">
         <link rel="canonical" href="https://gnokey.com/app" />
@@ -142,6 +149,7 @@
         <script type="text/javascript" src="/app/js/rsa.min.js"></script>
         <script type="text/javascript" src="/app/js/index.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/1.0.11/jquery.csv.min.js"></script>
         <script type="text/javascript" src="https://apis.google.com/js/client.js?onload=gapiCallback"></script>
     </body>
 </html>
