--- a/public/app/index.html
+++ b/public/app/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Manage Your Passwords from Google Drive| Gnokey</title>
+        <title>Manage Your Passwords from Google Drive | Gnokey</title>
         <meta content="A secure, simple, and free password manager. Use the convenience of Google Drive to manage your passwords." name="description">
         <meta content="Gnokey |  Password Manager" property="og:title">
         <meta content="A secure, simple, and free password manager. Use the convenience of Google Drive to manage your passwords." property="og:description">
@@ -16,16 +16,21 @@
         <meta content="https://uploads-ssl.webflow.com/600f7c0bb816926a774f5d03/6018534ab0640134cb4d1905_gnokey-open-graph-image.jpg" property="twitter:image">
         <meta property="og:type" content="website">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
         <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
         <link href="/images/webclip.png" rel="apple-touch-icon">
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="/app/css/main.min.css">
         <link rel="canonical" href="https://gnokey.com/app" />
-        <!-- <script>
-            if (!(window.location.host.startsWith("local")) && (window.location.protocol != "https:")) {
-                window.location.protocol = "https";
-            }
-        </script> -->
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ21X7EDDH"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-DJ21X7EDDH');
+        </script>   
     </head>
     <body>
         <!--[if lt IE 9]>
