chore: update login styles

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -145,9 +145,20 @@
         </button>
 
         <div class="load-overlay">
-            <button class="js-login btn btn-link">
-                <img src="/app/img/google-login.png">
-            </button>
+            <div class="card">
+                <div class="card-block">
+                    <div class="card-title">
+                        <img src="/app/img/logo.png" />
+                    </div>
+                    <p class="card-text">Turn Drive into your password manager.</p>
+                    <button class="js-login btn btn-link">
+                        <img src="/app/img/google-login.png">
+                    </button>
+                    <div class="loader">
+                        <img src="/app/img/loader.gif" />
+                    </div>
+                  </div>
+            </div>
         </div>
 
         <script type="text/javascript" src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
