chore: fix gnokey icons

--- a/public/app/index.html
+++ b/public/app/index.html
@@ -18,18 +18,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500&display=swap" rel="stylesheet">
-        <link href="/images/favicon.png" rel="shortcut icon" type="image/x-icon">
-        <link href="/images/webclip.png" rel="apple-touch-icon">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="/app/img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/app/img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="imgfavicon-16x16.png">
+        <link rel="manifest" href="/app/manifest.json">
+        <link rel="mask-icon" href="/app/img/safari-pinned-tab.svg" color="#ffde20">
+        <meta name="msapplication-TileColor" content="#ffde20">
+        <meta name="theme-color" content="#ffde20">
+
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
         <link rel="stylesheet" href="/app/css/main.min.css">
         <link rel="canonical" href="https://gnokey.com/app" />
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-DJ21X7EDDH"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-DJ21X7EDDH');
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-DJ21X7EDDH');
         </script>   
     </head>
     <body>
