--- a/public/app/index.html
+++ b/public/app/index.html
@@ -21,7 +21,7 @@
 
         <link rel="apple-touch-icon" sizes="180x180" href="/app/img/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/app/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="imgfavicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
         <link rel="manifest" href="/app/manifest.json">
         <link rel="mask-icon" href="/app/img/safari-pinned-tab.svg" color="#ffde20">
         <meta name="msapplication-TileColor" content="#ffde20">
